# gaussdb-python

./: .flake8  .gitignore  README.rst  mypy.ini  pyproject.toml  requirements.txt
certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  readme.txt  san.cnf  server.crt  server.csr  server.key
docs/: README.rst  conf.py  index.rst  news.rst  news_isort.rst  news_pool.rst  release.rst
example/: GaussDB_distributed_readme.md  GaussDB_master_standby_readme.md  README.md  cluster_ha_showcase.py  cluster_opengauss_docker.sh  cluster_opengauss_docker_readme.md  demo.py  logical_replication_demo.py  ssl_demo.py  ssl_opengauss_docker.sh
gaussdb/: README.rst  pyproject.toml
gaussdb_pool/: README.rst  pyproject.toml
tests/: README.rst  _test_connection.py  _test_copy.py  _test_cursor.py  _test_transaction.py  adapters_example.py  conftest.py  fix_crdb.py  fix_db.py  fix_faker.py  fix_gaussdb.py  fix_pq.py  fix_proxy.py  test_adapt.py  test_capabilities.py  test_column.py  test_concurrency.py  test_concurrency_async.py  test_connection.py  test_connection_async.py  test_connection_info.py  test_conninfo.py  test_conninfo_attempts.py  test_conninfo_attempts_async.py  test_copy.py  test_copy_async.py  test_cursor.py  test_cursor_async.py  test_cursor_client.py  test_cursor_client_async.py  test_cursor_common.py  test_cursor_common_async.py  test_cursor_raw.py  test_cursor_raw_async.py  test_cursor_server.py  test_cursor_server_async.py  test_dns.py  test_dns_srv.py  test_encodings.py  test_errors.py  (+24 more)
tools/: async_to_sync.py  bump_version.py  update_errors.py  (+3 more)
(+208 files in other folders)
