[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
]
testpaths=[
    "tests",
]
# Note: On Travis they these options seem to leak objects
# log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
# log_level = "DEBUG"

[tool.coverage.run]
source = [
    "gaussdb/gaussdb",
    "gaussdb_pool/gaussdb_pool",
]
[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    '\.\.\.$',
]

[tool.mypy]
files = [
    "gaussdb/gaussdb",
    "gaussdb_pool/gaussdb_pool",
    "gaussdb_c/gaussdb_c",
    "tests",
]
warn_unused_ignores = true
show_error_codes = true
disable_bytearray_promotion = true
disable_memoryview_promotion = true
strict = true
exclude = '''(?x)(
    ^ docs/lib/.*\.py
)'''

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "polib",
    "shapely.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_gaussdb.c,*.html"

[tool.isort]
profile = "black"
length_sort = true
multi_line_output = 9
sort_order = "gaussdb"  # requires the isort-gaussdb module
